fixed white space on archive vendor

--- a/sass/components/content/_single-performer.scss
+++ b/sass/components/content/_single-performer.scss
@@ -5,6 +5,9 @@
         margin-bottom: 2rem;
     }
 
+    .performer-text{
+        padding-top: 2rem;
+    }
     article {
         display: flex;
         flex-direction: column-reverse;
