--- a/sass/components/content/_single-vendor.scss
+++ b/sass/components/content/_single-vendor.scss
@@ -5,6 +5,9 @@
         margin-bottom: 2rem;
     }
 
+    .vendor-text{
+        padding: 2rem;
+    }
     article {
         display: flex;
         flex-direction: column-reverse;
