--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -151,7 +151,7 @@
                 }
                 h2{
                     margin: 0;
-                
+                    padding: 1rem;
                 }
 
                 @include media("tablet") {
